--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
   <!-- <meta http-equiv="refresh" content="0;URL='/'"> -->
   </meta>
-<link rel="shortcut icon" href="icon.png"></head>
+<link rel="shortcut icon" href="/icon.png"></head>
 
 
 
@@ -14,6 +14,6 @@
   <div id="app">
 
   </div>
-<script type="text/javascript" src="main.js"></script></body>
+<script type="text/javascript" src="/main.js"></script></body>
 
 </html>
